fetch data from the api and render it

--- a/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/appsettings.Development.json
+++ b/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "tt-connection-string": "Data Source=devdb.testimonialtree.com;Initial Catalog=TestimonialTree;User ID=fgcu;Password=mypasswordhere;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
+  "tt-connection-timeout": 30
 }
