fetch data from the api and render it

--- a/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/appsettings.json
+++ b/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "tt-connection-string": "Data Source=devdb.testimonialtree.com;Initial Catalog=TestimonialTree;User ID=fgcu;Password=ag9CnLVnCPkmiLX6RBBb;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
+  "tt-connection-timeout": 30
 }
