code quality rules

--- a/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/appsettings.Development.json
+++ b/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/appsettings.Development.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "tt-connection-string": "Data Source=devdb.testimonialtree.com;Initial Catalog=TestimonialTree;User ID=fgcu;Password=mypasswordhere;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
+  "tt-connection-string": "Data Source=devdb.testimonialtree.com;Initial Catalog=TestimonialTree;User ID=fgcu;Password=passwordhere;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
   "tt-connection-timeout": 30
 }
