--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,10 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "chart.js": "^4.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.6.1"
   },
