JW - added ExecuteQueryAsDictionary dbContext extention and fixed api/v1/data/{ActualUserID}/testimonialcount route

--- a/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/Properties/launchSettings.json
+++ b/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "CustomerHealthDashboardWebApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/v1/parentusers",
+      "launchUrl": "api/v1/data/3/testimonialcount",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
