update credentials for proddb fgcu_readonly

--- a/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/appsettings.json
+++ b/api/customer-health-dashboard-webapi/CustomerHealthDashboardWebApi/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "tt-connection-string": "Data Source=devdb.testimonialtree.com;Initial Catalog=TestimonialTree;User ID=fgcu;Password=ag9CnLVnCPkmiLX6RBBb;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
+  "tt-connection-string": "Data Source=proddb.testimonialtree.com;Initial Catalog=TestimonialTree;User ID=fgcu_readonly;Password=oXwDjpC37AVPGgN92TAY;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True",
   "tt-connection-timeout": 30
 }
