--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@mui/x-date-pickers": "^6.0.0",
     "chart.js": "^4.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
