--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.10.14",
     "chart.js": "^4.2.1",
@@ -20,6 +22,7 @@
     "react-bootstrap": "^2.6.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-select": "^5.6.1"
   },
   "devDependencies": {
